show percentage on totals

--- a/src/remarkable-ui/charts/tables/PivotTable.module.css
+++ b/src/remarkable-ui/charts/tables/PivotTable.module.css
@@ -1,3 +1,5 @@
+/* TODO: REVIEW ALL CSS VARIABLE WITH DENIS AND COMPLETE THE MISSING ONES */
+
 .tableContainer {
   background: var(--em-table-background-color-default-header, #fff);
   display: flex;
