--- a/src/remarkable-ui/charts/tables/PivotTable.module.css
+++ b/src/remarkable-ui/charts/tables/PivotTable.module.css
@@ -34,7 +34,6 @@
   position: sticky;
   bottom: 0;
   z-index: 1;
-  pointer-events: none;
 
   td {
     border-top: var(--em-table-border-width-default, 1px) solid #5c5c66;
@@ -53,7 +52,6 @@
   position: sticky;
   top: 0;
   z-index: 2;
-  pointer-events: none;
 }
 
 /* 1st column */
@@ -63,7 +61,6 @@
   position: sticky;
   left: 0;
   z-index: 1;
-  pointer-events: none;
   border-right: var(--em-table-border-width-default, 1px) solid #5c5c66;
 }
 
@@ -90,6 +87,9 @@
   min-width: 100px;
 
   p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     font-family: var(--em-table-font-family, Inter, sans-serif);
     font-size: var(--em-table-font-size, 0.75rem);
     font-weight: var(--em-table-font-font-weight-regular, 400);
