--- a/src/remarkable-ui/charts/tables/PivotTable.module.css
+++ b/src/remarkable-ui/charts/tables/PivotTable.module.css
@@ -36,7 +36,8 @@
   z-index: 1;
 
   td {
-    border-top: var(--em-table-border-width-default, 1px) solid #5c5c66;
+    border-top: var(--em-table-border-width-default, 1px) solid
+      var(--em-table-border-color-default, #ededf1);
     border-bottom: unset;
     font-weight: bold;
   }
@@ -61,7 +62,9 @@
   position: sticky;
   left: 0;
   z-index: 1;
-  border-right: var(--em-table-border-width-default, 1px) solid #5c5c66;
+  width: 150px;
+  max-width: 150px;
+  min-width: 150px;
 }
 
 .table thead tr th:last-of-type,
@@ -97,10 +100,6 @@
     line-height: var(--em-table-font-line-height, 0.875rem);
     color: var(--em-table-text-default, #212129);
   }
-}
-
-.cell.muted p {
-  color: var(--em-table-text-muted, #5c5c66);
 }
 
 .cell.header p {
