--- a/src/remarkable-pro/components/charts/shared/ChartCard/ChartCard.module.css
+++ b/src/remarkable-pro/components/charts/shared/ChartCard/ChartCard.module.css
@@ -10,13 +10,12 @@
 }
 
 .rightContent {
-  position: absolute;
   position: relative;
   right: 0;
 }
 
 .fixedContent {
-  z-index: 1;
+  z-index: 3;
   background: var(--em-background-color-default, #f7f7f8);
   position: absolute;
   top: 50%;
@@ -25,5 +24,10 @@
 }
 
 .fixedContent.loading {
-  z-index: 2;
+  z-index: 4;
+  display: block;
+}
+
+.fixedContent.hidden {
+  display: none;
 }
