EM-2547: Support sticky category labels for select (#220)
* support sticky category labels for select

* use existing category options mocks

* add changeset

* use sticky label by default

--- a/src/remarkable-ui/editors/select/shared/SelectList/SelectListOptions/SelectListCategory/SelectListCategory.module.css
+++ b/src/remarkable-ui/editors/select/shared/SelectList/SelectListOptions/SelectListCategory/SelectListCategory.module.css
@@ -4,6 +4,8 @@
   flex: 1 0 0;
   border-radius: var(--em-select-list-item-isolate-border-radius-default, 2px);
   background: var(--em-select-list-item-isolate-background-color-default, #ededf1);
+  position: sticky;
+  top: 0;
 }
 
 .categoryLabel {
