R UI 148 heat map (#222)
* table paginated

* finalize the rui table paginated component

* page total should be fixed

* improve

* fix tsconfig

* fixed index column

* add type align

* fix button of headers

* style the cell

* fix the loading state on the card

* null values

* aria on the table header

* tidy up embeddable state

* copy button + line on index column

* revert config

* interactions

* harry bugs

* debounce on sort

* add i18n for date ranges + pagination translation + i18n with args + final improvements

* update packages

* fix external line on chart card

* code rabbit review

* pivot wip poc

* pivot table wip rui component

* wip pivot pro

* format rows labels

* css improvement + format the column dimension

* pivot functionalities done

* styles

* show percentage on totals

* percentage on and off and decimal places as subinput

* improvements

* fix last columns width

* fix quarter issue

* organize folders

* organize folders

* improve a11y

* fix width

* heat map poc

* wip PRO component

* treshold being percentage or number

* min with inputs

* fix min width

* fix error

* fix fillgaps

* final heat map version

* cleanup

* cleanup

* light color

* fixed width

* fix png + width og heatmap

* adapt pivot table to follow same witdh logic

* fix png download

* fix the false display on the table

* fix chart card header

* fix labels

--- a/src/remarkable-ui/shared/Card/Card.module.css
+++ b/src/remarkable-ui/shared/Card/Card.module.css
@@ -29,6 +29,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--em-card-title-padding-default, 1rem);
+  width: 100%;
 }
 
 .title {
@@ -37,6 +38,7 @@
   font-style: normal;
   font-weight: var(--em-card-title-font-weight, 700);
   line-height: var(--em-card-title-font-line-height, 1.1875rem);
+  overflow-wrap: break-word;
 }
 
 .subtitle {
@@ -46,4 +48,5 @@
   font-style: normal;
   font-weight: var(--em-card-subtitle-font-weight, 400);
   line-height: var(--em-card-subtitle-font-line-height, 0.875rem);
+  overflow-wrap: break-word;
 }
