--- a/src/remarkable-ui/charts/tables/PivotTable/PivotTable.module.css
+++ b/src/remarkable-ui/charts/tables/PivotTable/PivotTable.module.css
@@ -1,10 +1,15 @@
 /* TODO: REVIEW ALL CSS VARIABLE WITH DENIS AND COMPLETE THE MISSING ONES */
+.pivotTableContainer {
+  width: 100%;
+  height: 100%;
+}
 
 .tableContainer {
   background: var(--em-table-background-color-default-header, #fff);
-  display: flex;
-  flex-direction: column;
-  width: 100%;
+  width: fit-content;
+
+  max-width: 100%;
+  height: fit-content;
   max-height: 100%;
 
   border: var(--em-table-border-width-default, 1px) solid
@@ -14,10 +19,17 @@
   overflow-y: auto;
   position: relative;
   box-sizing: border-box;
+
+  &.fullWidth {
+    width: 100%;
+
+    .table {
+      width: 100%;
+    }
+  }
 }
 
 .table {
-  width: 100%;
   border-spacing: 0;
   background: var(--em-table-background-color-default-header, #fff);
   box-sizing: content-box;
@@ -64,9 +76,6 @@
   position: sticky;
   left: 0;
   z-index: 1;
-  width: 150px;
-  max-width: 150px;
-  min-width: 150px;
 }
 
 .table thead tr th:last-of-type,
@@ -86,9 +95,6 @@
   border-right: var(--em-table-border-width-default, 1px) solid
     var(--em-table-border-color-default, #ededf1);
   background: var(--em-table-background-color-default-header, #fff);
-  width: 100px;
-  max-width: 100px;
-  min-width: 100px;
 
   p {
     overflow: hidden;
