--- a/src/remarkable-ui/charts/tables/Table/components/TableHeader/TableHeader.module.css
+++ b/src/remarkable-ui/charts/tables/Table/components/TableHeader/TableHeader.module.css
@@ -7,12 +7,12 @@
     z-index: 1;
     pointer-events: none;
 
-    min-width: var(--em-table-size-min-width_R, 3rem);
-    width: var(--em-table-size-min-width_R, 3rem);
-    background: var(--em-table-background-color-default-header_R, #fff);
+    min-width: var(--TEMP-table-size-min-width_R, 3rem);
+    width: var(--TEMP-table-size-min-width_R, 3rem);
+    background: var(--TEMP-table-background-color-default-header_R, #fff);
 
     button p {
-      color: var(--em-table-text-muted, #5c5c66);
+      color: var(--TEMP-table-text-muted, #5c5c66);
     }
 
     &::after {
@@ -20,9 +20,9 @@
       position: absolute;
       top: 0;
       bottom: 0;
-      right: calc(-1 * var(--em-table-border-width-default, 1px));
-      width: var(--em-table-border-width-default, 1px);
-      background: var(--em-table-border-color-default, #ededf1);
+      right: calc(-1 * var(--TEMP-table-border-width-default, 1px));
+      width: var(--TEMP-table-border-width-default, 1px);
+      background: var(--TEMP-table-border-color-default, #ededf1);
     }
   }
 
@@ -33,22 +33,22 @@
     background-color: unset;
     display: flex;
     justify-content: space-between;
-    padding: var(--em-table-padding-medium_R, 0.5rem);
+    padding: var(--TEMP-table-padding-medium_R, 0.5rem);
 
     svg {
-      width: var(--em-table-icon-size-width, 1rem);
-      height: var(--em-table-icon-size-height, 1rem);
+      width: var(--TEMP-table-icon-size-width, 1rem);
+      height: var(--TEMP-table-icon-size-height, 1rem);
     }
 
     p {
       white-space: nowrap;
-      padding: 0 var(--em-table-padding-small, 0.25rem);
-      /* font-family: var(--em-table-font-family, Inter); */
-      color: var(--em-table-text-default, #212129);
-      font-size: var(--em-table-font-size, 0.75rem);
+      padding: 0 var(--TEMP-table-padding-small, 0.25rem);
+      /* font-family: var(--TEMP-table-font-family, Inter); */
+      color: var(--TEMP-table-text-default, #212129);
+      font-size: var(--TEMP-table-font-size, 0.75rem);
       font-style: normal;
-      font-weight: var(--em-table-font-font-weight-medium, 500);
-      line-height: var(--em-table-font-line-height, 0.875rem);
+      font-weight: var(--TEMP-table-font-font-weight-medium, 500);
+      line-height: var(--TEMP-table-font-line-height, 0.875rem);
     }
   }
 }
