--- a/src/remarkable-ui/shared/ConfirmCancelModal/ConfirmCancelModal.module.css
+++ b/src/remarkable-ui/shared/ConfirmCancelModal/ConfirmCancelModal.module.css
@@ -1,7 +1,7 @@
 .actions {
   display: flex;
-  gap: var(--em-form-padding-small, 0.5rem);
+  gap: var(--TEMP-form-padding-small, 0.5rem);
   justify-content: flex-end;
-  padding-top: var(--em-card-padding-default);
+  padding-top: var(--TEMP-card-padding-default);
   overflow: unset;
 }
