--- a/src/remarkable-ui/charts/tables/Table/components/TableBody/TableBody.module.css
+++ b/src/remarkable-ui/charts/tables/Table/components/TableBody/TableBody.module.css
@@ -3,21 +3,21 @@
   left: 0;
   z-index: 1;
   pointer-events: none;
-  background: var(--em-table-background-color-default-header_R, #fff);
+  background: var(--TEMP-table-background-color-default-header_R, #fff);
 
   &::after {
     content: '';
     position: absolute;
     top: 0;
     bottom: 0;
-    right: calc(-1 * var(--em-table-border-width-default, 1px));
-    width: var(--em-table-border-width-default, 1px);
-    background: var(--em-table-border-color-default, #ededf1);
+    right: calc(-1 * var(--TEMP-table-border-width-default, 1px));
+    width: var(--TEMP-table-border-width-default, 1px);
+    background: var(--TEMP-table-border-color-default, #ededf1);
   }
 }
 
 .tableBody td.tableBodyCellIndex p {
-  color: var(--em-table-text-muted, #5c5c66);
+  color: var(--TEMP-table-text-muted, #5c5c66);
 }
 
 .tableBodyCell {
@@ -26,25 +26,25 @@
 
 .tableBodyCell p {
   white-space: nowrap;
-  padding: 0 var(--em-table-padding-small, 0.25rem);
-  /* font-family: var(--em-table-font-family, Inter); */
-  color: var(--em-table-text-default, #212129);
-  font-size: var(--em-table-font-size, 0.75rem);
+  padding: 0 var(--TEMP-table-padding-small, 0.25rem);
+  /* font-family: var(--TEMP-table-font-family, Inter); */
+  color: var(--TEMP-table-text-default, #212129);
+  font-size: var(--TEMP-table-font-size, 0.75rem);
   font-style: normal;
-  font-weight: var(--em-table-font-weight-regular, 400);
+  font-weight: var(--TEMP-table-font-weight-regular, 400);
   line-height: 0.875rem;
 }
 
 .copyButton {
   position: absolute;
   top: 50%;
-  right: var(--em-table-padding-medium_R, 0.5rem);
+  right: var(--TEMP-table-padding-medium_R, 0.5rem);
   transform: translateY(-50%);
   opacity: 0;
 }
 
 .copyButton.leftAlign {
-  left: var(--em-table-padding-medium_R, 0.5rem);
+  left: var(--TEMP-table-padding-medium_R, 0.5rem);
   right: auto;
 }
 
