--- a/src/remarkable-ui/editors/TextField/TextField.module.css
+++ b/src/remarkable-ui/editors/TextField/TextField.module.css
@@ -1,14 +1,14 @@
 .textField {
   display: flex;
   flex-direction: column;
-  gap: var(--em-form-padding-small, 0.5rem);
+  gap: var(--TEMP-form-padding-small, 0.5rem);
   .characterCount {
     display: flex;
     justify-content: flex-start;
-    font-family: var(--em-form-section-font-font-family, Inter);
-    font-size: var(--em-form-form-font-font-size-required, 0.75rem);
-    font-weight: var(--em-form-form-font-font-weight, 400);
-    line-height: var(--em-form-form-font-line-height, 1rem);
-    color: var(--em-form-section-font-font-color, #212129);
+    font-family: var(--TEMP-form-section-font-font-family, Inter);
+    font-size: var(--TEMP-form-form-font-font-size-required, 0.75rem);
+    font-weight: var(--TEMP-form-form-font-font-weight, 400);
+    line-height: var(--TEMP-form-form-font-line-height, 1rem);
+    color: var(--TEMP-form-section-font-font-color, #212129);
   }
 }
