--- a/src/remarkable-ui/editors/select/MultiSelectField/MultiSelectField.module.css
+++ b/src/remarkable-ui/editors/select/MultiSelectField/MultiSelectField.module.css
@@ -5,5 +5,5 @@
 .selectField {
   display: flex;
   flex-direction: column;
-  gap: var(--em-form-padding-small, 0.5rem);
+  gap: var(--TEMP-form-padding-small, 0.5rem);
 }
