--- a/src/remarkable-ui/shared/Card/Card.module.css
+++ b/src/remarkable-ui/shared/Card/Card.module.css
@@ -2,10 +2,10 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: var(--em-card-gap-default, 2rem);
-  padding: var(--em-card-padding-default, 2rem);
-  border-radius: var(--em-card-border-radius-default, 2rem);
-  background: var(--em-background-color-default, #f7f7f8);
+  gap: var(--TEMP-card-gap-default, 2rem);
+  padding: var(--TEMP-card-padding-default, 2rem);
+  border-radius: var(--TEMP-card-border-radius-default, 2rem);
+  background: var(--TEMP-background-color-default, #f7f7f8);
   box-sizing: border-box;
 }
 
@@ -19,7 +19,7 @@
 .header {
   width: 100%;
   display: flex;
-  gap: var(--em-card-title-padding-default, 1rem);
+  gap: var(--TEMP-card-title-padding-default, 1rem);
   justify-content: space-between;
   position: relative;
   align-items: center;
@@ -28,22 +28,22 @@
 .titles {
   display: flex;
   flex-direction: column;
-  gap: var(--em-card-title-padding-default, 1rem);
+  gap: var(--TEMP-card-title-padding-default, 1rem);
 }
 
 .title {
-  color: var(--em-card-title-color-default, #212129);
-  font-size: var(--em-card-title-font-size, 1.25rem);
+  color: var(--TEMP-card-title-color-default, #212129);
+  font-size: var(--TEMP-card-title-font-size, 1.25rem);
   font-style: normal;
-  font-weight: var(--em-card-title-font-weight, 700);
-  line-height: var(--em-card-title-font-line-height, 1.1875rem);
+  font-weight: var(--TEMP-card-title-font-weight, 700);
+  line-height: var(--TEMP-card-title-font-line-height, 1.1875rem);
 }
 
 .subtitle {
-  color: var(--em-foreground-color-muted, #5c5c66);
-  font-family: var(--em-card-subtitle-font-font-family, Inter);
-  font-size: var(--em-card-subtitle-font-size, 0.875rem);
+  color: var(--TEMP-foreground-color-muted, #5c5c66);
+  font-family: var(--TEMP-card-subtitle-font-font-family, Inter);
+  font-size: var(--TEMP-card-subtitle-font-size, 0.875rem);
   font-style: normal;
-  font-weight: var(--em-card-subtitle-font-weight, 400);
-  line-height: var(--em-card-subtitle-font-line-height, 0.875rem);
+  font-weight: var(--TEMP-card-subtitle-font-weight, 400);
+  line-height: var(--TEMP-card-subtitle-font-line-height, 0.875rem);
 }
