--- a/src/remarkable-ui/shared/ButtonIcon/ButtonIcon.module.css
+++ b/src/remarkable-ui/shared/ButtonIcon/ButtonIcon.module.css
@@ -1,18 +1,68 @@
-.icon {
-  width: var(--TEMP-icon-btn-icon-size-width, 1rem);
-  height: var(--TEMP-icon-btn-icon-size-height, 1rem);
-}
-
-.iconPrimary {
-  color: var(--TEMP-primary-btn-icon-color-default, #ffffff);
-}
-.iconSecondary {
-  color: var(--TEMP-secondary-btn-icon-color-default, #212129);
-}
 .buttonIcon {
-  height: var(--TEMP-primary-btn-size-default-height, 2.5rem);
-  padding: var(--TEMP-primary-btn-padding-default-top, 0.75rem)
-    var(--TEMP-primary-btn-padding-default-right, 0.75rem)
-    var(--TEMP-primary-btn-padding-default-bottom, 0.75rem)
-    var(--TEMP-primary-btn-padding-default-left, 0.75rem);
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
+  border: unset;
+  justify-content: center;
+  border-radius: var(--em-buttonicon-border-radius, 624.9375rem);
+
+  &.small {
+    height: var(--em-buttonicon-height--small, 2rem);
+    width: var(--em-buttonicon-height--small, 2rem);
+    padding: var(--em-buttonicon-padding-top-bottom--small, 0.375rem)
+      var(--em-buttonicon-padding-left-right--small, 0.375rem);
+  }
+
+  &.medium {
+    height: var(--em-buttonicon-height--medium, 2.5rem);
+    width: var(--em-buttonicon-height--medium, 2.5rem);
+    padding: var(--em-buttonicon-padding-top-bottom--medium, 0.75rem)
+      var(--em-buttonicon-padding-left-right--medium, 0.75rem);
+  }
+
+  &.primary {
+    color: var(--em-buttonicon-color--primary, #fff);
+    background: var(--em-buttonicon-background--primary, #5c5c66);
+
+    &:hover {
+      background: var(--em-buttonicon-background--primary--hover, #212129);
+    }
+
+    &:active {
+      background: var(--em-buttonicon-background--primary--active, #000);
+    }
+
+    &:disabled {
+      background: var(--em-buttonicon-background--primary--disabled, #ededf1);
+    }
+  }
+
+  &.secondary {
+    color: var(--em-buttonicon-color--secondary, #212129);
+    background: var(--em-buttonicon-background--secondary, #ededf1);
+
+    &:hover {
+      background: var(--em-buttonicon-background--secondary--hover, #e4e4ea);
+    }
+
+    &:active {
+      background: var(--em-buttonicon-background--secondary--active, #d2d2d5);
+    }
+
+    &:disabled {
+      color: var(--em-buttonicon-color--disabled, #b8b8bd);
+      background: var(--em-buttonicon-background--secondary--disabled, #ededf1);
+    }
+  }
+
+  &:disabled {
+    pointer-events: none;
+    color: var(--em-buttonicon-color--disabled, #b8b8bd);
+  }
+
+  svg {
+    width: var(--em-buttonicon-icon-size, 1rem);
+    height: var(--em-buttonicon-icon-size, 1rem);
+  }
 }
