clean up existing css files

--- a/src/remarkable-ui/shared/GhostButton/GhostButton.module.css
+++ b/src/remarkable-ui/shared/GhostButton/GhostButton.module.css
@@ -6,39 +6,46 @@
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
-  background: transparent;
+
+  background-color: transparent;
   font-style: normal;
+
   height: var(--em-ghostbutton-height, 1.25rem);
   padding: var(--em-ghostbutton-padding, 0.125rem);
+
   color: var(--em-ghostbutton-color, #212129);
+
   font-family: var(--em-ghostbutton-font-family, Inter, sans-serif);
   font-size: var(--em-ghostbutton-font-size, 0.75rem);
   font-weight: var(--em-ghostbutton-font-weight, 400);
   line-height: var(--em-ghostbutton-line-height, 0.875rem);
+
   border-radius: var(--em-ghostbutton-border-radius, 0.25rem);
 }
 
 .ghostButton:hover,
 .ghostButton:focus {
-  background: var(--em-ghostbutton-background--hover, #f7f7f8);
+  background-color: var(--em-ghostbutton-background--hover, #f7f7f8);
 }
 
 .ghostButton:active {
-  background: var(--em-ghostbutton-background--active, #ededf1);
+  background-color: var(--em-ghostbutton-background--active, #ededf1);
 }
 
 .ghostButton:disabled {
   cursor: unset;
   pointer-events: none;
-  background: transparent;
+
+  background-color: transparent;
   color: var(--em-ghostbutton-color--disabled, #b8b8bd);
 }
 
-.icon {
+.ghostButton svg {
   width: var(--em-ghostbutton-icon-size, 0.75rem);
   height: var(--em-ghostbutton-icon-size, 0.75rem);
 }
-.label {
+
+.ghostButton span {
   display: flex;
   align-items: center;
   padding: 0 var(--em-ghostbutton-label-padding-right, 0.25rem) 0
