--- a/src/remarkable-ui/shared/ActionIcon/ActionIcon.module.css
+++ b/src/remarkable-ui/shared/ActionIcon/ActionIcon.module.css
@@ -1,32 +1,35 @@
 .actionIcon {
   cursor: pointer;
-  border: unset;
+  border: none;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-shrink: 0;
+
   border-radius: var(--em-actionicon-border-radius, 624.9375rem);
-  background: var(--em-actionicon-background, #ededf1);
+  background-color: var(--em-actionicon-background, #ededf1);
+
   width: var(--em-actionicon-width, 1.25rem);
   height: var(--em-actionicon-height, 2rem);
+
   padding: var(--em-actionicon-padding-top-bottom, 0.5rem)
     var(--em-actionicon-padding-left-right, 0.125rem);
+}
 
-  svg {
-    width: var(--em-actionicon-icon-size, 1rem);
-    height: var(--em-actionicon-icon-size, 1rem);
-  }
+.actionIcon svg {
+  width: var(--em-actionicon-icon-size, 1rem);
+  height: var(--em-actionicon-icon-size, 1rem);
+}
 
-  &:hover {
-    background: var(--em-actionicon-background--hover, #e4e4ea);
-  }
+.actionIcon:hover {
+  background-color: var(--em-actionicon-background--hover, #e4e4ea);
+}
 
-  &:active {
-    background: var(--em-actionicon-background--active, #d2d2d5);
-  }
+.actionIcon:active {
+  background-color: var(--em-actionicon-background--active, #d2d2d5);
+}
 
-  &:disabled {
-    pointer-events: none;
-    color: var(--em-actionicon-color--disabled, #b8b8bd);
-  }
+.actionIcon:disabled {
+  pointer-events: none;
+  color: var(--em-actionicon-color--disabled, #b8b8bd);
 }
