--- a/src/remarkable-ui/shared/Card/Card.module.css
+++ b/src/remarkable-ui/shared/Card/Card.module.css
@@ -1,52 +1,55 @@
 .card {
-  position: relative;
   display: flex;
+  position: relative;
   flex-direction: column;
-  gap: var(--TEMP-card-gap-default, 2rem);
-  padding: var(--TEMP-card-padding-default, 2rem);
-  border-radius: var(--TEMP-card-border-radius-default, 2rem);
-  background: var(--TEMP-background-color-default, #f7f7f8);
   box-sizing: border-box;
+  gap: var(--em-card-gap, 2rem);
+  padding: var(--em-card-padding, 2rem);
+  border-radius: var(--em-card-border-radius, 2rem);
+  background: var(--em-card-background, #f7f7f8);
 }
 
-.content {
+.card .cardHeader {
+  width: 100%;
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: space-between;
+  gap: var(--em-card-header-gap, 1rem);
+}
+
+.card .cardHeader .leftContent {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: var(--em-card-header-gap, 1rem);
+}
+
+.card .cardHeader .leftContent h1 {
+  margin: unset;
+  overflow-wrap: break-word;
+  font-style: normal;
+  color: var(--em-card-title-color, #212129);
+  font-family: var(--em-card-title-font-family, sans-serif);
+  font-size: var(--em-card-title-font-size, 1rem);
+  font-weight: var(--em-card-title-font-weight, 700);
+  line-height: var(--em-card-title-line-height, 1.1875rem);
+}
+
+.card .cardHeader .leftContent p {
+  margin: unset;
+  overflow-wrap: break-word;
+  font-style: normal;
+  color: var(--em-card-subtitle-color, #5c5c66);
+  font-family: var(--em-card-subtitle-font-family, sans-serif);
+  font-size: var(--em-card-subtitle-font-size, 0.875rem);
+  font-weight: var(--em-card-subtitle-font-weight, 400);
+  line-height: var(--em-card-subtitle-line-height, 1.1875rem);
+}
+
+.card .cardContent {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
   overflow: auto;
-}
-
-.header {
-  width: 100%;
-  display: flex;
-  gap: var(--TEMP-card-title-padding-default, 1rem);
-  justify-content: space-between;
-  position: relative;
-  align-items: center;
-}
-
-.titles {
-  display: flex;
-  flex-direction: column;
-  gap: var(--TEMP-card-title-padding-default, 1rem);
-  width: 100%;
-}
-
-.title {
-  color: var(--TEMP-card-title-color-default, #212129);
-  font-size: var(--TEMP-card-title-font-size, 1.25rem);
-  font-style: normal;
-  font-weight: var(--TEMP-card-title-font-weight, 700);
-  line-height: var(--TEMP-card-title-font-line-height, 1.1875rem);
-  overflow-wrap: break-word;
-}
-
-.subtitle {
-  color: var(--TEMP-foreground-color-muted, #5c5c66);
-  font-family: var(--TEMP-card-subtitle-font-font-family, Inter);
-  font-size: var(--TEMP-card-subtitle-font-size, 0.875rem);
-  font-style: normal;
-  font-weight: var(--TEMP-card-subtitle-font-weight, 400);
-  line-height: var(--TEMP-card-subtitle-font-line-height, 0.875rem);
-  overflow-wrap: break-word;
 }
